@@ -1,5 +1,9 @@
 ; This file is generated from dist.ini.meta by dzil bakeini.
 ; Edit that file or the bundles contained within for long-term changes.
+; Generated by Dist::Zilla::Plugin::Author::KENTNL::DistINI version 2.020003 at Fri Sep 26 18:43:29 2014
+; vim: syntax=dosini
+; Uncomment this to bootstrap via self
+; [Bootstrap::lib]
 name = Comment-Spell-Check
 author = Kent Fredric <kentnl@cpan.org>
 license = Perl_5
@@ -14,9 +18,11 @@ issues = 1
 :version = 1.14000001
 
 [MetaData::BuiltWith / @Author::KENTNL/MetaData::BuiltWith]
+:version = 1.004000
 show_config = 1
 show_uname = 1
 uname_args = -s -o -r -m -i
+use_external_file = only
 
 [Git::Contributors / @Author::KENTNL/Git::Contributors]
 :version = 0.006
@@ -35,9 +41,12 @@ include_dotfiles = 1
 
 [MetaJSON / @Author::KENTNL/MetaJSON]
 
-[MetaYAML / @Author::KENTNL/MetaYAML]
+[MetaYAML::Minimal / @Author::KENTNL/MetaYAML::Minimal]
 
 [Manifest / @Author::KENTNL/Manifest]
+
+[Author::KENTNL::TravisCI / @Author::KENTNL/Author::KENTNL::TravisCI]
+:version = 0.001002
 
 [CopyFilesFromBuild / @Author::KENTNL/CopyXBuild]
 copy = LICENSE
@@ -52,12 +61,14 @@ copy = LICENSE
 
 [Test::Kwalitee / @Author::KENTNL/Test::Kwalitee]
 
-[EOLTests / @Author::KENTNL/EOLTests]
+[Test::EOL / @Author::KENTNL/Test::EOL]
 trailing_whitespace = 1
 
 [Test::MinimumVersion / @Author::KENTNL/Test::MinimumVersion]
 
 [Test::Compile::PerFile / @Author::KENTNL/Test::Compile::PerFile]
+:version = 0.003902
+test_template = 02-raw-require.t.tpl
 
 [Test::Perl::Critic / @Author::KENTNL/Test::Perl::Critic]
 
@@ -76,7 +87,7 @@ replacer = replace_with_blank
 -phase = develop
 -type = suggests
 Dist::Zilla::App::Command::bakeini = 0.001000
-Dist::Zilla::PluginBundle::Author::KENTNL = 2.021000
+Dist::Zilla::PluginBundle::Author::KENTNL = 2.025021
 
 [Prereqs::AuthorDeps / @Author::KENTNL/Prereqs::AuthorDeps]
 
@@ -92,9 +103,9 @@ locate_comment = 1
 default_jobs = 10
 
 [Author::KENTNL::RecommendFixes / @Author::KENTNL/Author::KENTNL::RecommendFixes]
-:version = 0.001001
+:version = 0.004002
 
-[ReadmeFromPod / @Author::KENTNL/ReadmeFromPod]
+[Readme::Brief / @Author::KENTNL/ShippedReadme]
 
 [ReadmeAnyFromPod / @Author::KENTNL/ReadmeAnyFromPod]
 filename = README.mkdn
@@ -120,6 +131,7 @@ tag_format = %v-source
 
 [Git::NextRelease / @Author::KENTNL/Git::NextRelease]
 :version = 0.004000
+default_branch = master
 format = %v %{yyyy-MM-dd'T'HH:mm:ss}dZ %h
 time_zone = UTC
 
@@ -129,6 +141,7 @@ time_zone = UTC
 allow_dirty_match = ^lib/
 
 [Git::CommitBuild / @Author::KENTNL/Git::CommitBuild]
+branch = builds
 release_branch = releases
 
 [Git::Tag / @Author::KENTNL/tag_release]
@@ -142,9 +155,16 @@ hash_tags = #perl #cpan #spelling
 tweet_url = https://metacpan.org/release/{{$AUTHOR_UC}}/{{$DIST}}-{{$VERSION}}{{$TRIAL}}#whatsnew
 url_shortener = none
 
-[Prereqs::Recommend::MatchInstalled / @Author::KENTNL/Prereqs::Recommend::MatchInstalled]
-modules = ExtUtils::MakeMaker
-modules = Test::More
+[Prereqs::Upgrade / @Author::KENTNL/Prereqs::Upgrade]
+Dist::Zila::Plugin::MetaProvides::Package = 2.000000
+Dist::Zilla = 5
+ExtUtils::MakeMaker = 7.00
+File::ShareDir::Install = 0.10
+Moo = 1.000008
+Moose = 2.000
+Path::Tiny = 0.058
+Test::File::ShareDir = 1.000000
+Test::More = 0.99
 
 [Prereqs::Recommend::MatchInstalled / @Author::KENTNL/always_latest_develop_bundle]
 applyto_map = develop.suggests = develop.suggests
@@ -152,16 +172,19 @@ applyto_phase = develop
 modules = Dist::Zilla::PluginBundle::Author::KENTNL
 modules = Dist::Zilla::App::Command::bakeini
 
+[RemovePrereqs::Provided / @Author::KENTNL/RemovePrereqs::Provided]
+
 [Prereqs / @Author::KENTNL/::Role::BundleDeps]
+; auto_prereqs_skip = File::Find
 -phase = develop
 -relationship = requires
-Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes = 0.001001
+Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes = 0.004002
+Dist::Zilla::Plugin::Author::KENTNL::TravisCI = 0.001002
 Dist::Zilla::Plugin::Authority = 1.006
 Dist::Zilla::Plugin::AutoPrereqs = 0
 Dist::Zilla::Plugin::BumpVersionAfterRelease = 0
 Dist::Zilla::Plugin::ConfirmRelease = 0
 Dist::Zilla::Plugin::CopyFilesFromBuild = 0
-Dist::Zilla::Plugin::EOLTests = 0
 Dist::Zilla::Plugin::Git::Check = 0
 Dist::Zilla::Plugin::Git::Commit = 0
 Dist::Zilla::Plugin::Git::CommitBuild = 0
@@ -175,11 +198,11 @@ Dist::Zilla::Plugin::MakeMaker = 0
 Dist::Zilla::Plugin::Manifest = 0
 Dist::Zilla::Plugin::ManifestSkip = 0
 Dist::Zilla::Plugin::MetaConfig = 0
-Dist::Zilla::Plugin::MetaData::BuiltWith = 0
+Dist::Zilla::Plugin::MetaData::BuiltWith = 1.004000
 Dist::Zilla::Plugin::MetaJSON = 0
 Dist::Zilla::Plugin::MetaProvides::Package = 1.14000001
 Dist::Zilla::Plugin::MetaTests = 0
-Dist::Zilla::Plugin::MetaYAML = 0
+Dist::Zilla::Plugin::MetaYAML::Minimal = 0
 Dist::Zilla::Plugin::MinimumPerl = 0
 Dist::Zilla::Plugin::PodCoverageTests = 0
 Dist::Zilla::Plugin::PodSyntaxTests = 0
@@ -187,12 +210,15 @@ Dist::Zilla::Plugin::PodWeaver = 0
 Dist::Zilla::Plugin::Prereqs = 0
 Dist::Zilla::Plugin::Prereqs::AuthorDeps = 0
 Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled = 0
+Dist::Zilla::Plugin::Prereqs::Upgrade = 0
+Dist::Zilla::Plugin::Readme::Brief = 0
 Dist::Zilla::Plugin::ReadmeAnyFromPod = 0
-Dist::Zilla::Plugin::ReadmeFromPod = 0
+Dist::Zilla::Plugin::RemovePrereqs::Provided = 0
 Dist::Zilla::Plugin::RewriteVersion::Sanitized = 0
 Dist::Zilla::Plugin::RunExtraTests = 0
 Dist::Zilla::Plugin::Test::CPAN::Changes = 0
-Dist::Zilla::Plugin::Test::Compile::PerFile = 0
+Dist::Zilla::Plugin::Test::Compile::PerFile = 0.003902
+Dist::Zilla::Plugin::Test::EOL = 0
 Dist::Zilla::Plugin::Test::Kwalitee = 0
 Dist::Zilla::Plugin::Test::MinimumVersion = 0
 Dist::Zilla::Plugin::Test::Perl::Critic = 0
