@@ -1,4 +1,5 @@
 ; Generated by Dist::Zilla::Plugin::Author::KENTNL::DistINI version 2.020003 at Fri Sep 26 18:43:29 2014
+; vim: syntax=dosini
 name             = Comment-Spell-Check
 author           = Kent Fredric <kentnl@cpan.org>
 license          = Perl_5
