@@ -1,10 +1,18 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.002001
+ [Added / runtime recommends]
+ - Moo 1.000008
+
+ [Changed / configure recommends]
+ - ExtUtils::MakeMaker 6.98 → 7.00
+
+ [Changed / test recommends]
+ - ExtUtils::MakeMaker 6.98 → 7.00
+ - Test::More 1.001006 → 0.99
 
 0.002000 2014-10-05T18:05:33Z
 
 0.001002 2014-10-01T13:23:27Z
 
 0.001001 2014-09-30T02:50:57Z
-
