@@ -1,6 +1,14 @@
 Release history for Comment-Spell-Check
 
 {{$NEXT}}
+ - Bugfix: Avoid test failures with -Ddefault_inc_excludes_dot
+
+ [Dependencies::Stats]
+ - Dependencies changed since 0.002000, see misc/*.deps* for details
+ - configure: +1 (recommends: ↑1)
+ - develop: +11 ↑3 -3 (recommends: +1, suggests: ↑2)
+ - runtime: (recommends: +1)
+ - test: +1 ↓1 (recommends: ↑1 ↓1)
 
 0.002000 2014-10-05T18:05:33Z 12320c6
  [00 Major]
@@ -23,4 +31,3 @@ Release history for Comment-Spell-Check
 
 0.001000 2014-09-29T18:30:20Z
  - First version.
-
